--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   sonar:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      issues: write
     env:
           REPO: ${{ github.repository }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
