--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -18,18 +18,20 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST: ${{ secrets.SONAR_HOST_URL }}
           SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}  # Replace with your SonarQube project key
+          SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}  # Replace with your SonarQube organization if applicable
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # - name: Run SonarQube Analysis via Docker
-      #   run: |
-      #     docker run --rm \
-      #       -e SONAR_HOST_URL="${{ secrets.SONAR_HOST_URL }}" \
-      #       -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" \
-      #       -v "${{ github.workspace }}:/usr/src" \
-      #       sonarsource/sonar-scanner-cli
+      - name: Run SonarQube Analysis via Docker
+            # -e SONAR_HOST_URL="${{ secrets.SONAR_HOST_URL }}" \
+        run: |
+          docker run --rm \
+            -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" \
+            -v "${{ github.workspace }}:/usr/src" \
+            -w /usr/src \
+            sonarsource/sonar-scanner-cli
 
       - name: Create GitHub Issues from SonarQube Results
         run: |
