--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -13,6 +13,7 @@ jobs:
       contents: read
       issues: write
     env:
+          GITHUB_WORKSPACE: ${{ github.workspace }}
           REPO: ${{ github.repository }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -24,14 +25,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Run SonarQube Analysis via Docker
-            # -e SONAR_HOST_URL="${{ secrets.SONAR_HOST_URL }}" \
-        run: |
-          docker run --rm \
-            -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" \
-            -v "${{ github.workspace }}:/usr/src" \
-            -w /usr/src \
-            sonarsource/sonar-scanner-cli
+      # - name: Run SonarQube Analysis via Docker
+      #       # -e SONAR_HOST_URL="${{ secrets.SONAR_HOST_URL }}" \
+      #   run: |
+      #     docker run --rm \
+      #       -e SONAR_TOKEN="${{ secrets.SONAR_TOKEN }}" \
+      #       -v "${{ github.workspace }}:/usr/src" \
+      #       -w /usr/src \
+      #       sonarsource/sonar-scanner-cli
 
       - name: Create GitHub Issues from SonarQube Results
         run: |
