--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 
 # Django secret key - generate a new one using:
 # python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
-DJANGO_SECRET_KEY=your-secret-key-here
+DJANGO_SECRET_KEY="django-insecure-_m)h73)&-!8sn$(ov6$z@*me7b0dr%0mjyej6x#yy7we5rpcf7"
 
 # Debug mode (set to False in production)
 DJANGO_DEBUG=True
